--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -31,7 +32,9 @@
 
         <div class="booking-content">
             <h1>Cruise Queen</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book./p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book./p>
         </div>
 
 
@@ -48,7 +51,7 @@
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">Departure</label>
-                    <input class="inp-style" type="date" name="">
+                        <input class="inp-style" type="date" name="">
                 </div>
                 <div class="input-group">
                     <label for="">Return</label>
@@ -58,20 +61,26 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input class="inp-style inp-width" id="first-count" type="text" name="" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p>+ -</p>
+                    <button onclick="handleTicketChange('first' , false);" class="btn btn-default"
+                        id="first-decrease"><i class="fas fa-minus"></i></button>
+                    <button onclick="handleTicketChange('first' , true);" class="btn btn-default" id="first-increase"><i
+                            class="fas fa-plus"></i></button>
                 </div>
             </div>
-            
+
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input class="inp-style inp-width" id="economy-count" type="text" name="" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                    <button onclick="handleTicketChange('economy', false);" class="btn btn-default"
+                        id="economy-decrease"><i class="fas fa-minus"></i></button>
+                    <button onclick=" handleTicketChange('economy' , true);" class="btn btn-default"
+                        id="economy-increase"><i class="fas fa-plus"></i></button>
                 </div>
             </div>
             <div class="calculations">
@@ -80,7 +89,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="sub-totalPrice">$0</p>
                     </div>
                 </div>
 
@@ -89,7 +98,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="ticket-tax">$50</p>
                     </div>
                 </div>
                 <hr>
@@ -98,7 +107,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="total-price">$0</p>
                     </div>
                 </div>
             </div>
@@ -110,7 +119,97 @@
 
     <!--Javascript start from here-->
     <script>
-    
+        //first class
+        // document.getElementById('first-increase').addEventListener('click', function () {
+        //     handleTicketChange('first' , true);
+        // })
+        // document.getElementById('first-decrease').addEventListener('click', function () {
+        //     handleTicketChange('first' , false);
+        // })
+        // //economy class
+        // document.getElementById('economy-increase').addEventListener('click', function () {
+        //     handleTicketChange('economy' , true);
+        // })
+        // document.getElementById('economy-decrease').addEventListener('click', function () {
+        //     handleTicketChange('economy', false);
+        // })
+
+        //handle ticket
+        function handleTicketChange(ticket, isIncrease) {
+            const ticketInput = document.getElementById(ticket + '-count');
+            const ticketCount = parseInt(ticketInput.value);
+            let newEconomyClassNumber = ticketCount;
+
+            if (isIncrease == true) {
+                newEconomyClassNumber = ticketCount + 1;
+            }
+            if (isIncrease == false && newEconomyClassNumber > 0) {
+                newEconomyClassNumber = ticketCount - 1;
+            }
+            ticketInput.value = newEconomyClassNumber;
+
+            calculateTotal();
+        }
+
+        //total calcutator
+        function calculateTotal() {
+            const firstClassInput = document.getElementById('first-count');
+            const firstClassInputCount = parseInt(firstClassInput.value);
+
+            const economyClassInput = document.getElementById('economy-count');
+            const economyClassInputCount = parseInt(economyClassInput.value);
+
+            const subTotalPrice = firstClassInputCount * 150 + economyClassInputCount * 100;
+            document.getElementById('sub-totalPrice').innerText = subTotalPrice;
+
+            const ticketTax = subTotalPrice * 0.1;
+            document.getElementById('ticket-tax').innerText = ticketTax;
+
+            const totalPrice = subTotalPrice + ticketTax;
+            document.getElementById('total-price').innerText = totalPrice;
+        }
+
+        // //economy class ticket handle
+        // function economyClassTicketChange(isIncrease) {
+        //     const economyClassInput = document.getElementById('economy-count');
+        //     const economyClassNumber = parseInt(economyClassInput.value);
+        //     let newEconomyClassNumber = economyClassNumber;
+
+        //     if (isIncrease == true) {
+        //         newEconomyClassNumber = economyClassNumber + 1;
+        //     }
+        //     if (isIncrease == false && newEconomyClassNumber > 0) {
+        //         newEconomyClassNumber = economyClassNumber - 1;
+        //     }
+        //     economyClassInput.value = newEconomyClassNumber;
+        // }
+
+        // //first class ticket handle
+        // function firstClassTicketChange(isIncrease) {
+        //     const firstClassInput = document.getElementById('first-count');
+        //     const firstClassNumber = parseInt(firstClassInput.value);
+        //     let newFirstClassNumber = firstClassNumber;
+        //     //const newFirstClassNumber = firstClassNumber + 1;
+        //     if (isIncrease == true) {
+        //         newFirstClassNumber = firstClassNumber + 1;
+        //     }
+        //     if (isIncrease == false && newFirstClassNumber > 0) {
+        //         newFirstClassNumber = firstClassNumber - 1;
+        //     }
+        //     firstClassInput.value = newFirstClassNumber;
+        // }
+        // document.getElementById('first-increase').addEventListener('click', function () {
+        //     const firstClassInput = document.getElementById('first-count');
+        //     const firstClassNumber = parseInt(firstClassInput.value);
+        //     const newFirstClassNumber = firstClassNumber + 1;
+        //     firstClassInput.value = newFirstClassNumber;
+        // })
+        // document.getElementById('first-decrease').addEventListener('click',function(){
+        //     const firstClassInput = document.getElementById('first-count');
+        //     const firstClassNumber = parseInt(firstClassInput.value);
+        //     const newFirstClassNumber = firstClassNumber - 1;
+        //     firstClassInput.value = newFirstClassNumber;
+        // })
     </script>
 </body>
 
